HNC-489 - fixed filtering on mobile - fixed labeling styling - removed random bug

--- a/src/main/webapp/bundles/home/less/layout.less
+++ b/src/main/webapp/bundles/home/less/layout.less
@@ -81,6 +81,10 @@
 	}
 }
 
+.landlord-navbar-text {
+	float: left;
+}
+
 @media (@sm) {
 	.landlord-filters {
 		padding: 5px 0;
@@ -91,7 +95,7 @@
 	.home #navbar-filter li.filter-excess {
 		width: 90px;
 	}
-	#navbar-filter-labels .navbar-text.filter-home-excess-label, #navbar-filter-labels .navbar-text.filter-contents-excess-label {
+	.home #navbar-filter-labels .navbar-text.filter-home-excess-label, .home #navbar-filter-labels .navbar-text.filter-contents-excess-label {
 		width: 90px;
 	}
 	#navbar-filter-labels .navbar-text {
